--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       - .:/usr/src/app
     ports:
       - "3000:3000"
-    command: npm run dev
+    command: sh -c "npm install && npm run dev"
